[package]
name = "dockermir"
version = "0.1.0"
authors = ["newbe36524 <newbe36524@qq.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
regex = "1.7.1"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.69"
thiserror = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.15.0", features = ["full"] }
cmd_lib = "1.3.0"

[dev-dependencies]
rstest = "0.16.0"
