[package]
name = "rg"
version = "0.1.0"
authors = ["newbe36524 <newbe36524@qq.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.109"
serde_yaml = "0.9.29"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
tokio = { version = "1.35.1", features = ["full"] }
cmd_lib = "1.9.3"
async-trait = "0.1.77"
appinsights = "0.2.3"

[dev-dependencies]
rstest = "0.18.2"
async-std = { version = "1.12", features = ["attributes"] }