[package]
name = "rg"
version = "0.1.0"
authors = ["newbe36524 <newbe36524@qq.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
thiserror = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full"] }
cmd_lib = "1.9.3"
async-trait = "0.1.79"
appinsights = "0.2.3"

[dev-dependencies]
rstest = "0.18.2"
async-std = { version = "1.12", features = ["attributes"] }