[package]
name = "rg"
version = "0.1.0"
authors = ["newbe36524 <newbe36524@qq.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0"
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.36.0", features = ["full"] }
cmd_lib = "1.9.3"
async-trait = "0.1.77"
appinsights = "0.2.3"

[dev-dependencies]
rstest = "0.21.0"
async-std = { version = "1.12", features = ["attributes"] }